<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SeleccionComidaFragment">

    <!-- Título de selección de comida -->
    <TextView
        android:id="@+id/txtSeleccionComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_comida"
        android:textSize="18sp"
        android:layout_marginBottom="20dp" />

    <!-- Opciones de comida -->
    <RadioGroup
        android:id="@+id/radioGroupComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radioPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza" />

        <RadioButton
            android:id="@+id/radioHamburguesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamburguesa" />

        <RadioButton
            android:id="@+id/radioTacos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tacos" />
    </RadioGroup>

    <!-- Botón para continuar -->
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente" />

</LinearLayout>